--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ modal end
         </ul>
       </div>
     </div>
-  </header><!-- /header -->
-
+  </header>
+   <!-- /header -->
 <!-- line modal -->
 <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -122,6 +122,8 @@ modal end
                             <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                    
                         </div>
             </form>
+        </div>
+         <!-- content goes here end-->
         </div>
 
         </div>
