--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ modal end
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">home</a></li>
-                <li><a class="dropdown-item" href="shop.html">shop</a></li>
+                <li><a class="dropdown-item" href="project.html">project</a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
