--- a/project.html
+++ b/project.html
@@ -148,7 +148,7 @@ modal end
     <div class="col-lg-12"></div>
     <!-- Example row of columns -->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
-      <a href="product.html">
+      <a href="project.html">
         <div class="col-md-2">
           <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
           <h2 style="font-size: 12px;">Heading</h2>
