--- a/index.html
+++ b/index.html
@@ -97,16 +97,18 @@ modal end
   </header>
   <!-- /header -->
   <!-- line modal -->
-  <!--<div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+  <!--start
+    <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
       </div>
-      <div class="modal-body">-->
+      <div class="modal-body">
+        end-->
 
   <!-- content goes here -->
-  <!--<div class="form-area">
+  <!--start <div class="form-area">
           <form role="form">
             <div class="form-group">
               <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
@@ -129,9 +131,10 @@ modal end
         </div>
       </div>
     </div>
-    -->
+    end-->
   <!-- content goes here end-->
-  <!--<div class="modal-footer">
+  <!--start
+    <div class="modal-footer">
       <div class="btn-group btn-group-justified" role="group" aria-label="group button">
         <div class="btn-group" role="group">
           <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
@@ -146,7 +149,8 @@ modal end
     </div>
   </div>
 </div>
-</div>-->
+</div>
+end-->
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
