--- a/project.html
+++ b/project.html
@@ -86,7 +86,9 @@ modal end
               </ul>
             </div>
           </li>
-          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
+          <!-- start
+            <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
+          end-->
           <!--<li></li>-->
         </ul>
       </div>
@@ -94,16 +96,16 @@ modal end
   </header><!-- /header -->
 
   <!-- line modal -->
-  <!--<div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+  <!--start <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body">
-        -->
+        end -->
   <!-- content goes here -->
-  <!--
+  <!--start
           <div class="form-area">
             <form role="form">
               <div class="form-group">
@@ -142,7 +144,8 @@ modal end
         </div>
       </div>
     </div>
-  </div>-->
+  </div>
+end-->
 
   <div class="container">
     <div class="col-lg-12"></div>
