--- a/project.html
+++ b/project.html
@@ -153,7 +153,7 @@ end-->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
       <a href="project.html">
         <div class="col-md-2">
-          <img src="images/dauberside.jpe" class="img-responsive center-block">
+          <img src="images/dauberside.jpeg" class="img-responsive center-block">
           <h2 style="font-size: 12px;">DauberSide</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
         </div>
