--- a/dauber.html
+++ b/dauber.html
@@ -150,12 +150,9 @@ modal end
               </ul>
             </div>
           </li>
-          <<<<<<< HEAD <!-- start <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
+          <!-- start <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
             end-->
-            =======
-
-            >>>>>>> 11d8d8f80fe483c67fbfe20ad9fa0b88956c0090
-            <!--<li></li>-->
+          <!--<li></li>-->
         </ul>
       </div>
     </div>
@@ -164,7 +161,7 @@ modal end
   <div id="main">
     <div class="container">
       <div id="productNav" class="col-md-12">
-        <a href="project.html"><span class="back-arrow">←</span> Back to shop </a>
+        <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
       </div>
     </div>
   </div>
@@ -173,7 +170,7 @@ modal end
     <div class="container">
       <div class="col-md-12">
         <div class="col-md-6">
-          <h1>product-title</h1>
+          <h1>DauberSide</h1>
           from
           <span class="sqs-money-native">2020</span>
           <div>
