--- a/project.html
+++ b/project.html
@@ -151,12 +151,15 @@ end-->
     <div class="col-lg-12"></div>
     <!-- Example row of columns -->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
-      <a href="project.html">
+      <a href="dauber.html">
         <div class="col-md-2">
           <img src="images/dauberside.jpeg" class="img-responsive center-block">
           <h2 style="font-size: 12px;">DauberSide</h2>
-          <p>Project：DOUBERSIDE</p>
-          <p>発端ときっかけKingsize</p>
+          <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
+            発端はKingsizeというZineから始まり。
+            存在として変わらない、何かが必要だった。
+          </p>
+
         </div>
       </a>
       <!--<a href="product.html">
