--- a/dauber.html
+++ b/dauber.html
@@ -194,7 +194,7 @@ modal end
     </div>
   </div>
   <!--main-->
-  <div id="main">
+  <div id="footer">
     <div class="container">
       <div id="productNav" class="col-md-12">
         <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
