--- a/dauber.html
+++ b/dauber.html
@@ -100,6 +100,18 @@
       line-height: normal;
     }
 
+    #footer {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    #footer .col-md-12 {
+      display: block;
+      border-bottom: 1px solid #ddd;
+      text-align: center;
+    }
+
+
     /*=========================
 modal start
 =========================*/
