--- a/dauber.html
+++ b/dauber.html
@@ -111,6 +111,13 @@
       text-align: center;
     }
 
+    #footer_productNav {
+      text-transform: lowercase;
+      margin-bottom: 60px;
+      display: none;
+      padding-bottom: 25px;
+      margin-top: -25px;
+    }
 
     /*=========================
 modal start
@@ -208,7 +215,7 @@ modal end
   <!--main-->
   <div id="footer">
     <div class="container">
-      <div id="productNav" class="col-md-12">
+      <div id="footer_productNav" class="col-md-12">
         <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
       </div>
     </div>
