--- a/project.html
+++ b/project.html
@@ -201,7 +201,15 @@ end-->
       </a>-->
     </div>
   </div>
-
+  <!--main-->
+  <div id="main">
+    <div class="container">
+      <div id="productNav" class="col-md-12">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
+    </div>
+  </div>
+  <!--main-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
