--- a/project.html
+++ b/project.html
@@ -38,6 +38,25 @@
       margin: 0 auto;
     }
 
+    #main {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    #main .col-md-12 {
+      display: block;
+      border-bottom: 1px solid #ddd;
+      text-align: center;
+    }
+
+    #productNav {
+      text-transform: lowercase;
+      margin-bottom: 60px;
+      display: none;
+      padding-bottom: 25px;
+      margin-top: -25px;
+    }
+
     /*=========================
 modal start
 =========================*/
@@ -152,7 +171,7 @@ end-->
   <div class="container">
     <div class="col-lg-12"></div>
     <!-- Example row of columns -->
-    <div class="row" style="max-width:800px; width:100%; margin: 0 auto;">
+    <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
       <a href="dauber.html">
         <div class="col-md-2">
           <img src="images/dauberside.jpeg" class="img-responsive center-block">
