--- a/dauber.html
+++ b/dauber.html
@@ -282,7 +282,7 @@ carousel end
 
     <div class="row">
 
-      <div class="col-lg-12">
+      <div class="col-md-6">
         <div id="carousel-custom" class="carousel slide" data-ride="carousel">
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
