--- a/dauber.html
+++ b/dauber.html
@@ -177,38 +177,6 @@ carousel start
       position: relative;
     }
 
-    .carousel-control.left {
-      background-image: none;
-      width: 54px;
-      height: 54px;
-      top: 50%;
-      left: 20px;
-      margin-top: -27px;
-      line-height: 54px;
-      border: 2px solid #fff;
-      opacity: 1;
-      text-shadow: none;
-      -webkit-transition: all 0.2s ease-in-out 0s;
-      -o-transition: all 0.2s ease-in-out 0s;
-      transition: all 0.2s ease-in-out 0s;
-    }
-
-    .carousel-control.right {
-      background-image: none;
-      width: 54px;
-      height: 54px;
-      top: 50%;
-      right: 20px;
-      margin-top: -27px;
-      line-height: 54px;
-      border: 2px solid #fff;
-      opacity: 1;
-      text-shadow: none;
-      -webkit-transition: all 0.2s ease-in-out 0s;
-      -o-transition: all 0.2s ease-in-out 0s;
-      transition: all 0.2s ease-in-out 0s;
-    }
-
     /*=========================
 carousel end
 =========================*/
@@ -293,18 +261,7 @@ carousel end
               <img src="http://placehold.it/1400x600&text=slide2" alt="..." class="img-responsive">
             </div>
           </div>
-
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left"></i>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-            <i class="fa fa-chevron-right"></i>
-            <span class="sr-only">Next</span>
-          </a>
-
-
+          <!-- Wrapper for slides end-->
           <!-- Indicators -->
           <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
             <li data-target="#carousel-custom" data-slide-to="0" class="active">
@@ -315,6 +272,7 @@ carousel end
             </li>
 
           </ol>
+          <!-- Indicators end-->
         </div>
 
       </div>
