--- a/dauber.html
+++ b/dauber.html
@@ -266,10 +266,10 @@ carousel end
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="http://placehold.it/1400x600&text=slide1" alt="..." class="img-responsive">
+                <img src="https://placehold.jp/600x600.png&text=slide1" alt="..." class="img-responsive">
               </div>
               <div class="item">
-                <img src="http://placehold.it/1400x600&text=slide2" alt="..." class="img-responsive">
+                <img src="https://placehold.jp/600x600.png&text=slide2" alt="..." class="img-responsive">
               </div>
             </div>
 
@@ -287,10 +287,10 @@ carousel end
             <!-- Indicators -->
             <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
               <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                <img src="http://placehold.it/100x50&text=slide1" alt="..." class="img-responsive">
+                <img src="https://placehold.jp/60x60.png" alt="..." class="img-responsive">
               </li>
               <li data-target="#carousel-custom" data-slide-to="1">
-                <img src="http://placehold.it/100x50&text=slide2" alt="..." class="img-responsive">
+                <img src="https://placehold.jp/60x60.png" alt="..." class="img-responsive">
               </li>
 
             </ol>
