--- a/dauber.html
+++ b/dauber.html
@@ -275,11 +275,11 @@ carousel end
 
             <!-- Controls -->
             <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-              <i class="glyphicon glyphicon-arrow-left"></i>
+              <i class="glyphicon glyphicon-chevron-left" aria-hidden="true"></i>
               <span class="sr-only">Previous</span>
             </a>
             <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-              <i class="glyphicon glyphicon-arrow-right"></i>
+              <i class="glyphicon glyphicon-chevron-right" aria-hidden="true"></i>
               <span class="sr-only">Next</span>
             </a>
 
