--- a/dauber.html
+++ b/dauber.html
@@ -185,12 +185,9 @@ carousel start
       left: 20px;
       margin-top: -27px;
       line-height: 54px;
-      border: 2px solid #fff;
+      /*border: 2px solid #fff;*/
       opacity: 1;
       text-shadow: none;
-      -webkit-transition: all 0.2s ease-in-out 0s;
-      -o-transition: all 0.2s ease-in-out 0s;
-      transition: all 0.2s ease-in-out 0s;
     }
 
     .carousel-control.right {
@@ -201,12 +198,9 @@ carousel start
       right: 20px;
       margin-top: -27px;
       line-height: 54px;
-      border: 2px solid #fff;
+      /*border: 2px solid #fff;*/
       opacity: 1;
       text-shadow: none;
-      -webkit-transition: all 0.2s ease-in-out 0s;
-      -o-transition: all 0.2s ease-in-out 0s;
-      transition: all 0.2s ease-in-out 0s;
     }
 
     /*=========================
