改編につぐ改編

--- a/dauber.html
+++ b/dauber.html
@@ -250,11 +250,15 @@ carousel end
           from
           <span class="sqs-money-native">2020</span>
           <div>
-            <p>どこから始めましょうか？二十世紀の終わりの頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物絶えず入れ替わる男女、高い塀、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる熱い悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
+            <p>どこから始めましょうか？</p>
+            <title>地獄篇、第一歌、三十二行</title>
+            <p>
+            二十世紀の終わりの頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物絶えず入れ替わる男女、高い塀、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる熱い悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
             </p>
-            <p>私はこの東国に生き、そこで死ぬ。私を知っている一人の人間が、ある定められた回数だけ私を眺め、決して忘れる事のなく、私の陰影と私の象徴を一遍の物に書きしるすためだ。
+            <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、決して忘れる事のなく、私の陰影と私の象徴を一遍の物に書きしるすためだ。
             </p>
             <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に心に描写される。</p>
+            <p></p>
           </div>
         </div>
         <!--carousel-custom-->
