--- a/dauber.html
+++ b/dauber.html
@@ -68,7 +68,9 @@
 
     #main02 .col-md-6 {
       margin: 1em 0;
-      font-size: 16px;
+      font-size: 14px
+        /*16px*/
+      ;
       line-height: 1.5em;
     }
 
