参考と改編の違いがわからない。

--- a/dauber.html
+++ b/dauber.html
@@ -253,7 +253,7 @@ carousel end
           <span class="sqs-money-native">2020</span>
           <div>
             <p>どこから始めましょうか？</p>
-            <title>地獄篇、第一歌、三十二行</title>
+            <strong>参考：地獄篇、第一歌、三十二行</strong>
             <p>
             二十世紀の終わりの頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物絶えず入れ替わる男女、高い塀、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる熱い悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
             </p>
