--- a/dauber.html
+++ b/dauber.html
@@ -252,12 +252,11 @@ carousel end
           from
           <span class="sqs-money-native">2020</span>
           <div>
-            <p>どこから始めましょうか？</p>
-            <strong>参考：地獄篇、第一歌、三十二行</strong>
+            <p>序論：どこから始めましょうか？</p>
             <p>
-            二十世紀の終わりの頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物絶えず入れ替わる男女、高い塀、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる熱い悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
+            二十世紀から二十一世紀の頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
             </p>
-            <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、決して忘れる事のなく、私の陰影と私の象徴を一遍の物に書きしるすためだ。
+            <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。
             </p>
             <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に心に描写される。</p>
             <p></p>
@@ -270,10 +269,10 @@ carousel end
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="http://placehold.it/1400x600&text=slide1" alt="..." class="img-responsive center-block">
+                <img src="https://pin.it/5XJkove&text=slide1" alt="..." class="img-responsive center-block">
               </div>
               <div class="item">
-                <img src="http://placehold.it/1400x600&text=slide2" alt="..." class="img-responsive center-block">
+                <img src="https://pin.it/6UL27qe&text=slide2" alt="..." class="img-responsive center-block">
               </div>
             </div>
 
@@ -289,10 +288,10 @@ carousel end
             <!-- Indicators -->
             <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
               <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                <img src="http://placehold.it/100x50&text=slide1" alt="..." class="img-responsive center-block">
+                <img src="hhttps://pin.it/3Yn8Hiz&text=slide1" alt="..." class="img-responsive center-block">
               </li>
               <li data-target="#carousel-custom" data-slide-to="1">
-                <img src="http://placehold.it/100x50&text=slide2" alt="..." class="img-responsive center-block">
+                <img src="https://pin.it/6UL27qe&text=slide2" alt="..." class="img-responsive center-block">
               </li>
 
             </ol>
