--- a/dauber.html
+++ b/dauber.html
@@ -269,10 +269,10 @@ carousel end
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="https://pin.it/5XJkove&text=slide1" alt="..." class="img-responsive center-block">
+                <img src="https://assets.pinterest.com/ext/embed.html?id=486599934744742603&text=slide1" alt="..." class="img-responsive center-block">
               </div>
               <div class="item">
-                <img src="https://pin.it/6UL27qe&text=slide2" alt="..." class="img-responsive center-block">
+                <img src="https://assets.pinterest.com/ext/embed.html?id=486599934744741851&text=slide2" alt="..." class="img-responsive center-block">
               </div>
             </div>
 
@@ -288,10 +288,10 @@ carousel end
             <!-- Indicators -->
             <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
               <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                <img src="hhttps://pin.it/3Yn8Hiz&text=slide1" alt="..." class="img-responsive center-block">
+                <img src="https://assets.pinterest.com/ext/embed.html?id=486599934744742603&text=slide1" alt="..." class="img-responsive center-block">
               </li>
               <li data-target="#carousel-custom" data-slide-to="1">
-                <img src="https://pin.it/6UL27qe&text=slide2" alt="..." class="img-responsive center-block">
+                <img src="https://assets.pinterest.com/ext/embed.html?id=486599934744741851&text=slide2" alt="..." class="img-responsive center-block">
               </li>
 
             </ol>
