--- a/dauber.html
+++ b/dauber.html
@@ -269,10 +269,10 @@ carousel end
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg&text=slide1" alt="..." class="img-responsive center-block">
+                <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item">
-                <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg&text=slide2" alt="..." class="img-responsive center-block">
+                <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
 
@@ -288,10 +288,10 @@ carousel end
             <!-- Indicators -->
             <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
               <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg&text=slide1" alt="..." class="img-responsive center-block">
+                <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
               <li data-target="#carousel-custom" data-slide-to="1">
-                <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg&text=slide2" alt="..." class="img-responsive center-block">
+                <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
 
             </ol>
