--- a/project.html
+++ b/project.html
@@ -177,8 +177,7 @@ end-->
           <img src="images/dauberside.jpeg" class="img-responsive center-block">
           <h2 style="font-size: 12px;">DauberSide</h2>
           <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
-            発端はKingsizeというZineから始まり。
-            存在として変わらない、何かが必要だった。
+            Projectの発端はKingsizeというZineから始まる。
           </p>
 
         </div>
