--- a/dauber.html
+++ b/dauber.html
@@ -252,13 +252,12 @@ carousel end
           from
           <span class="sqs-money-native">2020</span>
           <div>
-            <p>序論：どこから始めましょうか？</p>
+            <p>どこから始めましょうか？</p>
             <p>
             二十世紀から二十一世紀の頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
             </p>
-            <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。
-            </p>
-            <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に心に描写される。</p>
+            <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。</p>
+            <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。</p>
             <p></p>
           </div>
         </div>
