--- a/dauber.html
+++ b/dauber.html
@@ -254,12 +254,13 @@ carousel end
           <div>
             <p>どこから始めましょうか？</p>
             <p>
-            二十世紀から二十一世紀の頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物が？と？であり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
+            二十世紀から二十一世紀の頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物があり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
             </p>
             <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。</p>
             <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。</p>
-            <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、落書きの素材となるべき塗布具。</p>
+            <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、芸術の素材となるべき運命の塗布具。</p>
             <p>一人の人間の夢は、万人の記憶の一部。</p>
+            <p></p>
 
           </div>
         </div>
