--- a/dauber.html
+++ b/dauber.html
@@ -248,8 +248,7 @@ carousel end
     <div class="container">
       <div class="col-md-12">
         <div class="col-md-6">
-          <p>title:</p>
-          <h1>DauberSide</h1>
+          <h1><p>title:</p>DauberSide</h1>
           from
           <span class="sqs-money-native">2020</span>
           <div>
