--- a/dauber.html
+++ b/dauber.html
@@ -258,7 +258,7 @@ carousel end
             </p>
             <p>私はこの東国に生き、そこで死ぬ。私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。</p>
             <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。</p>
-            <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、芸術の素材となるべき運命の塗布具。</p>
+            <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。</p>
             <p>一人の人間の夢は、万人の記憶の一部。</p>
             <p></p>
 
