--- a/project.html
+++ b/project.html
@@ -176,9 +176,7 @@ end-->
         <div class="col-md-2">
           <img src="images/dauberside.jpeg" class="img-responsive center-block">
 
-          <h2 style="font-size: 12px;">
-            <p>title:</p>
-            DauberSide</h2>
+          <h2 style="font-size: 12px;">DauberSide</h2>
           <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
             Projectの発端はKingsizeというZineから始まる。
           </p>
