--- a/dauber.html
+++ b/dauber.html
@@ -259,20 +259,7 @@ carousel end
             <p>私はこの東国に生き、私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。</p>
             <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。</p>
             <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。</p>
-            <p>一人の人間の夢は、万人の記憶の一部。</p>
-            <p>title:onlymarkers</p>
-            <p>ADAMS</p>
-            <p></p>
-            <p>彼は2000年の春にKINGSIZEという、プロジェクトを始めた。<br>
-              彼はDIYという文化と落書きの文化を活用して、独自のマーカを設計した。
-              その際に世界中に２０本という数のマーカーを世界に配布し、見事に書籍にまとめたのです。
-            </p>
-            <p>私は、このKINGSIZEというプロジェクトがどの様に誕生するに至ったのか、経緯や、タグや落書きのの歴史を超えて、
-              何が私に創造性を結びつけたのかを理解したいと思いました。</p>
-
-
-
-
+            <p>それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。</p>
           </div>
         </div>
         <!--carousel-custom-->
