--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ modal end
               </ul>
             </div>
           </li>
+          <li><span><i class="fab fa-instagram"></i></span></li>
           <!--<li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>-->
           <!--<li></li>-->
         </ul>
