--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="css/crime.css" rel="stylesheet">
   <link href="css/menu.css" rel="stylesheet">
   <link rel="canonical" href="https://www.example.com/">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
     body {
@@ -91,7 +92,7 @@ modal end
               </ul>
             </div>
           </li>
-          <li><span><i class="fab fa-instagram"></i></span></li>
+          <li><span class="fab fa-instagram"></span></li>
           <!--<li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>-->
           <!--<li></li>-->
         </ul>
