--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="css/crime.css" rel="stylesheet">
   <link href="css/menu.css" rel="stylesheet">
   <link rel="canonical" href="https://www.example.com/">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 
   <style>
     body {
