--- a/project.html
+++ b/project.html
@@ -107,6 +107,7 @@ modal end
               </ul>
             </div>
           </li>
+          <li><a href="https://imginn.com/dauberside/"><span class="fab fa-instagram"></span><a></li>
           <!-- start
             <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
           end-->
