--- a/dauber.html
+++ b/dauber.html
@@ -228,6 +228,7 @@ carousel end
               </ul>
             </div>
           </li>
+          <li><a href="https://imginn.com/dauberside/"><span class="fab fa-instagram"></span><a></li>
           <!-- start <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
             end-->
           <!--<li></li>-->
@@ -252,7 +253,7 @@ carousel end
           from
           <span class="sqs-money-native">2020</span>
           <div>
-            <p>どこから始めましょうか？</p>
+            <p>序論：どこから始めましょうか？</p>
             <p>
             二十世紀から二十一世紀の頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物があり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
             </p>
@@ -260,6 +261,9 @@ carousel end
             <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。</p>
             <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。</p>
             <p>それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。</p>
+            <p>第一塗布具：ADAMS</p>
+            <p></p>
+
           </div>
         </div>
         <!--carousel-custom-->
