--- a/dauber.html
+++ b/dauber.html
@@ -228,7 +228,7 @@ carousel end
               </ul>
             </div>
           </li>
-          <li><a href="https://imginn.com/dauberside/"><span class="fab fa-instagram"></span><a></li>
+          <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
           <!-- start <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
             end-->
           <!--<li></li>-->
