--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ modal end
               </ul>
             </div>
           </li>
-          <li><a href="https://imginn.com/dauberside/"><span class="fab fa-instagram"></span><a></li>
+          <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
           <!--<li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>-->
           <!--<li></li>-->
         </ul>
