--- a/index.html
+++ b/index.html
@@ -113,49 +113,51 @@ modal end
         end-->
 
   <!-- content goes here -->
-  <!--start <div class="form-area">
-          <form role="form">
-            <div class="form-group">
-              <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
-              <span class="help-block">
-                <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
-            </div>
-          </form>
-        </div>
+  <!--start-->
+  <div class="form-area">
+    <form role="form" 　action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSfjDSKLcmEL4dIAUvVZn6YLlhXSD3hIOt9Wfetiab8XrYGj0g/formResponse" method="POST">
+      <div class="form-group">
+        <input type="text" name="entry.142474848" class="form-control" id="name" name="name" placeholder="Name" required>
       </div>
-    </div>
-    end-->
+      <div class="form-group">
+        <input type="text" name="entry.330826898" class="form-control" id="email" name="email" placeholder="Email" required>
+      </div>
+      <!-- <div class="form-group">
+              <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
+            </div>-->
+      <div class="form-group">
+        <input name="entry.416750429" type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+        <span class="help-block">
+          <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
+      </div>
+    </form>
+  </div>
+  </div>
+  </div>
+  <!--end-->
+
   <!-- content goes here end-->
-  <!--start
-    <div class="modal-footer">
-      <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-        <div class="btn-group" role="group">
-          <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
-        </div>
-        <div class="btn-group btn-delete hidden" role="group">
-          <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Delete</button>
-        </div>
-        <div class="btn-group" role="group">
-          <button type="button" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
-        </div>
+  <!--start-->
+  <div class="modal-footer">
+    <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
+      </div>
+      <div class="btn-group btn-delete hidden" role="group">
+        <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Delete</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
       </div>
     </div>
   </div>
-</div>
-</div>
-end-->
+  </div>
+  </div>
+  </div>
+  <!--end-->
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
