--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ modal end
               <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
             </div>-->
               <div class="form-group">
-                <input name="entry.416750429" type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
               </div>
               <div class="form-group">
-                <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                <textarea name="entry.416750429" class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
                   <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
               </div>
