--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@ modal end
               <!-- <div class="form-group">
               <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
             </div>-->
-              <div class="form-group">
+              <!--<div class="form-group">
                 <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-              </div>
+              </div>-->
               <div class="form-group">
                 <textarea name="entry.416750429" class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
