--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@ modal end
       <div class="modal-footer">
         <div class="btn-group btn-group-justified" role="group" aria-label="group button">
           <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
+            <button type="button" class="close btn btn-default" data-dismiss="modal" role="button">close</button>
           </div>
           <div class="btn-group btn-delete hidden" role="group">
-            <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Delete</button>
+            <button type="button" id="delImage" class="close btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
           </div>
           <div class="btn-group" role="group">
-            <button type="button" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
+            <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
           </div>
         </div>
       </div>
