--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ modal end
                 <input type="text" name="entry.142474848" class="form-control" id="name" name="name" placeholder="Name" required>
               </div>
               <div class="form-group">
-                <input type="text" name="entry.330826898" class="form-control" id="email" name="email" placeholder="Email" required>
+                <input type="email" name="emailaddres" class="form-control" id="email" name="email" placeholder="Email" required>
               </div>
               <!-- <div class="form-group">
               <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
@@ -147,7 +147,7 @@ modal end
             <button type="button" class="close btn btn-default" data-dismiss="modal" role="button">close</button>
           </div>
           <div class="btn-group btn-delete hidden" role="group">
-            <button type="button" id="delImage" class="close btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
+            <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
           </div>
           <div class="btn-group" role="group">
             <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
