--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ modal end
           <!-- content goes here -->
           <!--start-->
           <div class="form-area">
-            <form role="form" 　action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSfjDSKLcmEL4dIAUvVZn6YLlhXSD3hIOt9Wfetiab8XrYGj0g/formResponse" method="POST">
+            <form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSfjDSKLcmEL4dIAUvVZn6YLlhXSD3hIOt9Wfetiab8XrYGj0g/formResponse">
               <div class="form-group">
                 <input type="text" name="entry.142474848" class="form-control" id="name" name="name" placeholder="Name" required>
               </div>
