--- a/index.html
+++ b/index.html
@@ -133,6 +133,21 @@ modal end
                 <span class="help-block">
                   <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
               </div>
+              <!--start-->
+              <div class="modal-footer">
+                <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
+                  </div>
+                  <div class="btn-group btn-delete hidden" role="group">
+                    <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
+                  </div>
+                  <div class="btn-group" role="group">
+                    <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
+                  </div>
+                </div>
+              </div>
+              <!--end-->
             </form>
           </div>
         </div>
@@ -140,20 +155,6 @@ modal end
       <!--end-->
 
       <!-- content goes here end-->
-      <!--start-->
-      <div class="modal-footer">
-        <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
-          </div>
-          <div class="btn-group btn-delete hidden" role="group">
-            <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
-          </div>
-          <div class="btn-group" role="group">
-            <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
   </div>
