--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@ modal end
             </div>
           </li>
           <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
+          <!--start
           <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
+            end-->
           <!--<li></li>-->
         </ul>
       </div>
@@ -113,7 +115,7 @@ modal end
           <!--end-->
 
           <!-- content goes here -->
-          <!--start-->
+          <!--start
           <div class="form-area">
             <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSfjDSKLcmEL4dIAUvVZn6YLlhXSD3hIOt9Wfetiab8XrYGj0g/formResponse" method="post">
               <div class="form-group">
@@ -125,15 +127,17 @@ modal end
               <!-- <div class="form-group">
               <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
             </div>-->
-              <!--<div class="form-group">
+          <!--<div class="form-group">
                 <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
               </div>-->
+          <!--start
               <div class="form-group">
                 <textarea name="entry.416750429" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
                   <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
               </div>
-              <!--start-->
+              end-->
+          <!--start
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                   <div class="btn-group" role="group">
@@ -147,16 +151,16 @@ modal end
                   </div>
                 </div>
               </div>
-              <!--end-->
-            </form>
-          </div>
+              end-->
+          </form>
         </div>
       </div>
-      <!--end-->
-      <!--iframeにリダイレクトかける。-->
-
-      <!-- content goes here end-->
     </div>
+    <!--end-->
+    <!--iframeにリダイレクトかける。-->
+
+    <!-- content goes here end-->
+  </div>
   </div>
   </div>
   <!--end-->
