--- a/index.html
+++ b/index.html
@@ -124,12 +124,14 @@ modal end
               <div class="form-group">
                 <input type="text" name="entry.142474848" class="form-control" id="name" placeholder="Name" required>
               </div>
-              <!-- <div class="form-group">
+              <div class="form-group">
               <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
             </div>-->
-          <!--<div class="form-group">
+          <!--　start
+            <div class="form-group">
                 <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-              </div>-->
+              </div>
+            end -->
           <!--start
               <div class="form-group">
                 <textarea name="entry.416750429" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
