--- a/project.html
+++ b/project.html
@@ -177,7 +177,7 @@ end-->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
       <a href="dauber.html">
         <div class="col-md-2">
-          <img src="images/dauberside.jpeg" class="img-responsive center-block">
+          <img src="images/dauberside.png" class="img-responsive center-block">
 
           <h2 style="font-size: 12px;">DauberSide</h2>
           <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
