--- a/dauber.html
+++ b/dauber.html
@@ -273,7 +273,7 @@ carousel end
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b810.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item">
                 <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
