--- a/dauber.html
+++ b/dauber.html
@@ -289,7 +289,7 @@ carousel end
             </a>-->
 
 
-              <!-- Indicators -->
+              <!-- Indicators start
               <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
                 <li data-target="#carousel-custom" data-slide-to="0" class="active">
                   <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg" alt="..." class="img-responsive center-block" height="60" width="60">
@@ -299,6 +299,7 @@ carousel end
                 </li>
 
               </ol>
+              Indicators end-->
             </div>
 
           </div>
