--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <style>
     body {
-      /*background-image: url(images/bg.JPG);*/
+      background-image: url(images/bg.png);
       background-position: center center;
       background-size: cover;
       background-attachment: fixed;
