--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@ modal end
             </div>
           </li>
           <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
-          <!--start
           <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
-            end-->
+
           <!--<li></li>-->
         </ul>
       </div>
@@ -115,31 +114,19 @@ modal end
           <!--end-->
 
           <!-- content goes here -->
-          <!--start
           <div class="form-area">
-            <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSfjDSKLcmEL4dIAUvVZn6YLlhXSD3hIOt9Wfetiab8XrYGj0g/formResponse" method="post">
+            <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post">
               <div class="form-group">
-                <input type="email" name="emailaddres" class="form-control" id="email" placeholder="Email" required>
+                <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="Name" required>
               </div>
               <div class="form-group">
-                <input type="text" name="entry.142474848" class="form-control" id="name" placeholder="Name" required>
+                <input type="email" name="entry.1551144577" class="form-control" id="email" placeholder="Email" required>
               </div>
               <div class="form-group">
-              <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
-            </div>-->
-          <!--　start
-            <div class="form-group">
-                <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-              </div>
-            end -->
-          <!--start
-              <div class="form-group">
-                <textarea name="entry.416750429" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
                   <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
               </div>
-              end-->
-          <!--start
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                   <div class="btn-group" role="group">
@@ -153,23 +140,25 @@ modal end
                   </div>
                 </div>
               </div>
-              end-->
-          </form>
+            </form>
+            <script type="text/javascript">var submitted = false;</script>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='/contact/thanks-page';}"></iframe>
+            <!-- content goes here -->
+          </div>
         </div>
       </div>
+      <!--end-->
+      <!--iframeにリダイレクトかける。-->
+
+      <!-- content goes here end-->
     </div>
     <!--end-->
-    <!--iframeにリダイレクトかける。-->
-
-    <!-- content goes here end-->
-  </div>
-  <!--end-->
 
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/crime.js"></script>
-  <script src="js/tiltfx.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/crime.js"></script>
+    <script src="js/tiltfx.js"></script>
 </body>
 </html>
