--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ modal end
               </div>
             </form>
             <script type="text/javascript">var submitted = false;</script>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='/contact/thanks-page.html';}"></iframe>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='contact/thanks-page.html';}"></iframe>
             <!-- content goes here -->
           </div>
         </div>
