--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -297,7 +297,7 @@
   <div id="main">
     <div class="container">
       <div id="productNav" class="col-md-12">
-        <a href="../index.html"></a><span class="back-arrow">←</span>thanks messege</a>
+        <a href="../index.html"><span class="back-arrow">←</span>thanks messege</a>
       </div>
     </div>
   </div>
