--- a/dauber.html
+++ b/dauber.html
@@ -216,6 +216,7 @@ carousel end
 
 </head>
 <body>
+  <!-- /header -->
   <header id="header">
     <div class="container">
       <div id="logo">
@@ -238,8 +239,10 @@ carousel end
         </ul>
       </div>
     </div>
-  </header><!-- /header -->
-  <!--start-->
+  </header>
+  <!-- /header -->
+
+  <!-- content goes here -->
   <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -247,9 +250,6 @@ carousel end
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body" style="padding:10px 10px 0px 10px;">
-          <!--end-->
-
-          <!-- content goes here -->
           <div class="form-area">
             <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
               <div class="form-group">
@@ -279,17 +279,12 @@ carousel end
             </form>
             <script type="text/javascript">var submitted = false;</script>
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='contact/thanks-page.html';}"></iframe>
-            <!-- content goes here -->
           </div>
         </div>
       </div>
-      <!--end-->
-      <!--iframeにリダイレクトかける。-->
-
-      <!-- content goes here end-->
     </div>
   </div>
-  <!--end-->
+  <!-- content goes here end-->
 
   <!--main-->
   <div id="main">
