--- a/dauber.html
+++ b/dauber.html
@@ -261,7 +261,7 @@ carousel end
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
-                  <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
+                  <p id="characterLeft" class="help-block ">Up to 140 characters</p></span>
               </div>
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
