--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="noindex,nofollow">
 
   <title>lol</title>
-  <link href="css/crime.css" rel="stylesheet">
+  <link href="css/crime02.css" rel="stylesheet">
   <link href="css/menu.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
@@ -101,7 +101,7 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/crime.js"></script>
+  <script src="js/crime02.js"></script>
   <script src="js/tiltfx.js"></script>
 </body>
 </html>
