--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
                     <p class="fa fa-home">home</p></a></li>
-                <li><a class="dropdown-item fa fa-project-diagram" href="project.html">
+                <li><a class="dropdown-item" href="project.html">
                     <p class="fa fa-project-diagram">project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
