--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -23,8 +23,10 @@
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li><a class="dropdown-item" href="../index.html">home</a></li>
-                <li><a class="dropdown-item" href="../project.html">project</a></li>
+                　<li><a class="dropdown-item" href="index.html">
+                    <p class="fas fa-home">home</p></a></li>
+                <li><a class="dropdown-item" href="project.html">
+                    <p class="fas fa-umbrella">project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
