--- a/project.html
+++ b/project.html
@@ -90,7 +90,7 @@
   </div>
   <!--end-->
 
-  <div class="container">
+  <div id="main" class="container">
     <div class="col-lg-12"></div>
     <!-- Example row of columns -->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
