--- a/dauber.html
+++ b/dauber.html
@@ -174,8 +174,8 @@
             ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。<br>
             つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。<br>
             私は、ADAMSのKINGSIZEを読んで、私が感じた定義は「take what get mentality」、というものでした。
-            それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。<br>しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。<br>そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。<br>我々の場合で言えば落書きを探求し、生を探求するわけです。<br>私の信ずるところでは、生は落書きから成り立っています。<br>落書きは、ことさら風変わりな何物かではない。<br>いずれ分かりますが、落書きは都会という場所で待ち伏せています。<br>いつ何時、我々の目の前に現れるやもしれないのです。<br>
-            ところで、これはよく起こる事ですが、我々はある思い違いをします。<br>例えば落書きを研究する事は即、破壊行為であると、それは思い違いです。<br>しかし、書物というものはなんであるかを知るきっかけでしかありません。
+            それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。<br>しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。<br>そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。<br>私の場合で言えば落書きを探求し、生を探求するわけです。<br>私の信ずるところでは、生は落書きから成り立っています。<br>落書きは、ことさら風変わりな何物かではない。<br>いずれ分かりますが、落書きは都会という場所で待ち伏せています。<br>いつ何時、我々の目の前に現れるやもしれないのです。<br>
+            ところで、これはよく起こる事ですが、我々はある思い違いをします。<br>例えば落書きという行為そのものが即、破壊行為であると、それは思い違いです。<br>しかし、書物というものはなんであるかを知るきっかけでしかありません。
             </p>
         </div>
       </div>
