--- a/dauber.html
+++ b/dauber.html
@@ -106,12 +106,13 @@
             <div>
               <p>Introduction: where should we start?</p>
               <p>
-                In the twentieth and twenty-first centuries, from the dawn of a new day until the veil of darkness descended, What see in the eyes of the beast, was a valley of buildings, vertical structures, constantly changing men and women, and, apparently, a sewer filled with dead leaves. Little did I know that there was something I longed for, a wind that carried the pleasure of painting buildings and the smell of structures. Nope. I had no way to know.
+                the twentieth and twenty-first centuries, from the dawn of a new day until the veil of darkness descended, What see in the eyes of the beast, was a valley of buildings, vertical structures, constantly changing men and women, and, apparently, a sewer filled with dead leaves. There is something I long for.
+                I didn't know that it was the wind that carried the pleasure of painting buildings and the smell of structures. Nope. I had no way of knowing.
                 I live in this eastern country, where people who know me look at me a certain predetermined number of times and I disappear.
                 But the workings of the world are too complicated to describe for the simple mind of the beast.
                 I focused. A dream that looks dim and moody, an application tool destined to be a material for activities that generations of human beings are commonplace and, in a sense, forever.
 
-                It's just a human dream, but it becomes part of everyone's memory.
+                It is only one man's dream, but it becomes part of everyone's memory.
                 </p>
             </div>
           </div>
