--- a/dauber.html
+++ b/dauber.html
@@ -108,7 +108,7 @@
               <p>
                 the twentieth and twenty-first centuries, from the dawn of a new day until the veil of darkness descended, What see in the eyes of the beast, was a valley of buildings, vertical structures, constantly changing men and women, and, apparently, a sewer filled with dead leaves. There is something I long for.<br>
                 I didn't know that it was the wind that carried the pleasure of painting buildings and the smell of structures. Nope. I had no way of knowing.<br>
-                I live in this eastern country, where people who know me look at me a certain predetermined number of times and I disappear.
+                I live in this eastern country, where people who know me look at me a certain predetermined number of times and I disappear.<br>
                 But the workings of the world are too complicated to describe for the simple mind of the beast.<br>
                 I focused. A dream that looks dim and moody, an application tool destined to be a material for activities that generations of human beings are commonplace and, in a sense, forever.
                 <br>
